tests/fsharp/typecheck/sigs/neg110.bsl
neg110.fs(5,3,5,15): typecheck error FS1133: No constructors are available for the type 'NotAttribute'

neg110.fs(5,3,5,15): typecheck error FS3242: This type does not inherit Attribute, it will not work correctly with other .NET languages.
